--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,1 +1,23 @@
-<p>contact works!</p>
+<div class="typographyTestContainer">
+  <p style="font: var(--typography-title-font-large)">title-font-large</p>
+  <p style="font: var(--typography-title-font-medium)">title-font-medium</p>
+
+  <p style="font: var(--typography-header-font-large)">header-font-large</p>
+  <p style="font: var(--typography-header-font-large-accent)">header-font-large-accent</p>
+  <p style="font: var(--typography-header-font-medium)">header-font-medium</p>
+  <p style="font: var(--typography-header-font-medium-accent)">header-font-medium-accent</p>
+
+  <p style="font: var(--typography-body-font)">body-font</p>
+</div>
+
+<div class="typographyTestContainerInline">
+  <span style="font: var(--typography-title-font-large)">title</span>
+  <span style="font: var(--typography-title-font-medium)">title</span>
+
+  <span style="font: var(--typography-header-font-large)">header</span>
+  <span style="font: var(--typography-header-font-large-accent)">header</span>
+  <span style="font: var(--typography-header-font-medium)">header</span>
+  <span style="font: var(--typography-header-font-medium-accent)">header</span>
+
+  <span style="font: var(--typography-body-font)">body</span>
+</div>
