--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -25,6 +25,7 @@
       [title]="project.title"
       [subtitle]="project.oneLine"
       [imageUrl]="project.coverImageUrl"
+      [routerLink]="`/projects/${project.folderName}`"
     />
   }
 </main>
