--- a/src/app/pages/projects/projects.scss
+++ b/src/app/pages/projects/projects.scss
@@ -1,9 +1,17 @@
+@use '../../../customVariables';
+
 .tab-selector {
   height: 15px;
   aspect-ratio: 1;
   background-color: var(--mat-sys-primary);
   border-radius: 50%;
   display: inline-block;
+}
+
+.subtitle {
+  font: var(--typography-header-font-large);
+  text-align: center;
+  align-content: center;
 }
 
 .mat-mdc-tab-labels {
