--- a/src/app/common/components/card-selector/card-selector.html
+++ b/src/app/common/components/card-selector/card-selector.html
@@ -7,7 +7,9 @@
     {{ title }}
   </mat-card-header>
   <mat-card-content>
-    {{ subtitle }}
+    <div class="text">
+      {{ subtitle }}
+    </div>
     <mat-icon>chevron_right</mat-icon>
   </mat-card-content>
 </mat-card>
