--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -23,7 +23,7 @@
     </mat-tab-group>
   </div>
 
-  <div class="subtitle">
+  <div class="subtitle c-whitespace-container--wide">
     Find out more about a specific Project
   </div>
 
