[BIG REWORK] Collection of tasks done in preparation for applying to a course
- reworked Project class and replaced the testing projects with real projects
- added a full page loader
- reworked project-summary-base to contain more info and pictures
- added image-dialog to view images up close
- created project-documentation and added it to projects page
- created scroll-to-top-button
- added navigation for documentations in projects
- updated info in home to better reflect the current state of the site
- created team page (still has to be fully implemented)
- removed commented out code block from app.html (was still there from the base template)

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -6,9 +6,42 @@
     by
     <p>{{ activeTitleWord | async }}</p>
   </div>
-  <div #contentPane class="content-pane">
+
+  <div #contentPane class="content-pane content-pane--split">
+    <div class="content-pane__block content-pane__block--left">
+      <p #contentPaneText
+         class="content-pane__header"
+         observeVisibility
+         [debounceTime]="0"
+         (visible)="contentPaneVisible($event)"
+      >
+        Welcome to my page!
+      </p>
+      <h1 #contentPaneText
+          class="content-pane__text"
+          observeVisibility
+          [debounceTime]="0"
+          (visible)="contentPaneVisible($event)"
+      >
+        This website is a place for me to upload and document my projects.
+        <br>
+        There's currently not much around, but I intend to keep expanding this page, to maybe use it in the future as
+        homepage for a game studio.
+        <br>
+        While you're already here, make sure to check out some of my <a [routerLink]="['projects']">projects</a> and
+        explore the website a bit.
+        <br>
+        Have fun ^^
+      </h1>
+    </div>
+    <div class="content-pane__block content-pane__block--right content-pane__block--image-wrapper">
+      <img src="/assets/miko_idle_weapon_scaled_x8_adjusted.gif" alt="animated miko player character">
+    </div>
+  </div>
+
+  <div #contentPane class="content-pane content-pane--block-title">
     <p #contentPaneText
-       class="content-pane__header"
+       class="content-pane__header--accent"
        observeVisibility
        [debounceTime]="0"
        (visible)="contentPaneVisible($event)"
@@ -18,13 +51,22 @@
   </div>
 
   @if (featuredProject) {
-    <div class="c-whitespace-container--slim">
-      <card-selector
-        [title]="featuredProject.title"
-        [subtitle]="featuredProject.oneLine"
-        [imageUrl]="featuredProject.coverImageUrl"
-        [routerLink]="`/projects/${featuredProject.folderName}`"
-      />
+    <div class="featured-project">
+      <div class="featured-project__image-wrapper c-whitespace-container--wide">
+        <img
+          src="{{featuredProject.mainImageUrl}}"
+          alt="Main visual of the featured project"
+        >
+      </div>
+
+      <div class="c-whitespace-container--slim">
+        <card-selector
+          [title]="featuredProject.title"
+          [subtitle]="featuredProject.oneLine"
+          [imageUrl]="featuredProject.coverImageUrl"
+          [routerLink]="`/projects/${featuredProject.folderName}`"
+        />
+      </div>
     </div>
   }
 
@@ -62,7 +104,7 @@
        [debounceTime]="0"
        (visible)="contentPaneVisible($event)"
     >
-      Read more about our great team
+      Read more about our great <a [routerLink]="['team']">Team</a>
     </p>
   </div>
 
@@ -73,7 +115,7 @@
        [debounceTime]="0"
        (visible)="contentPaneVisible($event)"
     >
-      For requests or questions, get in touch with us here
+      For requests or questions, get in touch with us <a [routerLink]="['contact']">here</a>
     </p>
   </div>
 
@@ -92,8 +134,36 @@
        [debounceTime]="0"
        (visible)="contentPaneVisible($event)"
     >
-      There is currently no direct way to support us. But you just reading this already means much to us.
-      If you like our projects, you can let us know over on our social media channels.
+      There is currently no direct way to support us, other than over our projects on itch.io.
+      <br>
+      But you just reading this already means much to us.
+      <br>
+      If you like our projects, you can let us know over on our social media channels. (Will be added in the future)
+    </p>
+  </div>
+
+  <div #contentPane class="content-pane">
+    <p #contentPaneText
+       class="content-pane__header"
+       observeVisibility
+       [debounceTime]="0"
+       (visible)="contentPaneVisible($event)"
+    >
+      Website Info
+    </p>
+    <p #contentPaneText
+       class="content-pane__text"
+       observeVisibility
+       [debounceTime]="0"
+       (visible)="contentPaneVisible($event)"
+    >
+      This website is being made with Angular and Angular Material.
+      <br>
+      The components are all mostly made in house and without any code written by AI. This is done to build up and
+      increase our own knowledge about web design and to give the website a unique and custom feel.
+      <br>
+      The website is built with a responsive design that supports mobile devices of sizes down to 360px and also comes
+      with dark-/light-mode that automatically adjusts to the users preferences.
     </p>
   </div>
 </main>
