--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -1,40 +1,82 @@
 <main>
-  <div class="c-whitespace-container--wide">
-    <mat-tab-group
-      #summaryTabGroup
-      [(selectedIndex)]="summaryTabGroupSelectedIndex"
-      fitInkBarToContent
-      mat-stretch-tabs="false"
-      mat-align-tabs="center"
-      headerPosition="below"
-      (touchstart)="lastTouchStart.set($event.touches[0])"
-      (touchmove)="lastTouchMove.set($event.touches[0])"
-      (touchend)="summarySwipeEnd()"
-      (touchcancel)="summarySwipeCancel()"
-    >
+  @if (loading) {
+    <mat-spinner class="c-spinner-view"/>
+  } @else {
+    <div class="c-whitespace-container--wide">
+      <mat-tab-group
+        #summaryTabGroup
+        [(selectedIndex)]="summaryTabGroupSelectedIndex"
+        fitInkBarToContent
+        mat-stretch-tabs="false"
+        mat-align-tabs="center"
+        headerPosition="below"
+        (touchstart)="lastTouchStart.set($event.touches[0])"
+        (touchmove)="lastTouchMove.set($event.touches[0])"
+        (touchend)="summarySwipeEnd()"
+        (touchcancel)="summarySwipeCancel()"
+      >
+        @for (project of projects; track project) {
+          <mat-tab>
+            <ng-template mat-tab-label>
+              <span class="tab-selector"></span>
+            </ng-template>
+            <project-summary-base [project]="project"/>
+          </mat-tab>
+        }
+      </mat-tab-group>
+    </div>
+
+    <div class="subtitle c-whitespace-container--wide">
+      Project Documentation
+    </div>
+
+    <project-documentation #projectDocumentation/>
+
+    <div class="subtitle c-whitespace-container--wide">
+      Find out more about other Projects
+    </div>
+
+    <div class="c-whitespace-container--slim">
       @for (project of projects; track project) {
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <span class="tab-selector"></span>
-          </ng-template>
-          <project-summary-base [project]="project"/>
-        </mat-tab>
+        @if (project.index != summaryTabGroupSelectedIndex()) {
+          <card-selector
+            [title]="project.title"
+            [subtitle]="project.oneLine"
+            [imageUrl]="project.coverImageUrl"
+            [routerLink]="`/projects/${project.folderName}`"
+            (click)="projectButtonClicked()"
+          />
+        }
       }
-    </mat-tab-group>
-  </div>
+    </div>
 
-  <div class="subtitle c-whitespace-container--wide">
-    Find out more about a specific Project
-  </div>
+    <div class="documentation-navigation" [class.documentation-navigation--expanded]="navigationExpanded">
+      <button #documentationNavigationToggleButton matFab (click)="documentationNavigationToggle()">
+        <mat-icon>
+          {{ navigationExpanded ? 'arrow_forward' : 'list' }}
+        </mat-icon>
+      </button>
+      <mat-tree #tree [dataSource]="documentationNavigationDataSource" [childrenAccessor]="childrenAccessor">
+        <!-- Template for leaf nodes (non-expandable nodes) -->
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding matTreeNodePaddingIndent="20">
+          <button matButton (click)="documentationNavigationNodeClicked(node.route)">
+            {{ node.name }}
+          </button>
 
-  <div class="c-whitespace-container--slim">
-    @for (project of projects; track project) {
-      <card-selector
-        [title]="project.title"
-        [subtitle]="project.oneLine"
-        [imageUrl]="project.coverImageUrl"
-        [routerLink]="`/projects/${project.folderName}`"
-      />
-    }
-  </div>
+        </mat-tree-node>
+        <!-- Template for expandable nodes -->
+        <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding matTreeNodePaddingIndent="20"
+                       matTreeNodeToggle
+                       [cdkTreeNodeTypeaheadLabel]="node.name">
+          <button matButton matTreeNodeToggle (click)="documentationNavigationNodeClicked(node.route)"
+                  [attr.aria-label]="'Toggle ' + node.name">
+            {{ node.name }}
+            <mat-icon iconPositionEnd>
+              {{ tree.isExpanded(node) ? 'arrow_drop_down' : 'arrow_right' }}
+            </mat-icon>
+          </button>
+        </mat-tree-node>
+      </mat-tree>
+    </div>
+  }
 </main>
