--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -44,3 +44,19 @@
     background-color: var(--mat-sys-background);
   }
 }
+
+.featured-project {
+
+  &__image-wrapper {
+    text-align: center;
+    align-content: center;
+
+    img {
+      max-height: 50dvh;
+      max-width: 100%;
+      height: auto;
+      width: auto;
+      object-fit: contain;
+    }
+  }
+}
