--- a/src/app/pages/team/team.html
+++ b/src/app/pages/team/team.html
@@ -1,1 +1,13 @@
-<p>team works!</p>
+<main>
+  <div #contentPane class="content-pane">
+    <p #contentPaneText
+       class="content-pane__header--accent"
+       observeVisibility
+       [debounceTime]="0"
+       (visible)="contentPaneVisible($event)"
+    >
+      Under Construction
+    </p>
+    <img class="animation__hover" src="/assets/servant_builder_animated_outline.gif" alt="animated worker demon">
+  </div>
+</main>
