- updated text of home page - made content-pane text more responsive by binding the text size to the container width

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -25,11 +25,15 @@
       >
         This website is a place for me to upload and document my projects.
         <br>
+        <br>
         There's currently not much around, but I intend to keep expanding this page, to maybe use it in the future as
-        homepage for a game studio.
+        homepage for a game studio. If you see some mismatched text, that's just preparation for the switch from private
+        homepage to game studio page.
+        <br>
         <br>
         While you're already here, make sure to check out some of my <a [routerLink]="['projects']">projects</a> and
         explore the website a bit.
+        <br>
         <br>
         Have fun ^^
       </h1>
@@ -134,9 +138,9 @@
        [debounceTime]="0"
        (visible)="contentPaneVisible($event)"
     >
-      There is currently no direct way to support us, other than over our projects on itch.io.
+      There is currently no direct way to support us, other than over our projects on itch.io,
+      but you just reading this already means much to us.
       <br>
-      But you just reading this already means much to us.
       <br>
       If you like our projects, you can let us know over on our social media channels. (Will be added in the future)
     </p>
@@ -157,10 +161,12 @@
        [debounceTime]="0"
        (visible)="contentPaneVisible($event)"
     >
-      This website is being made with Angular and Angular Material.
+      <b>This website is being made with Angular and Angular Material.</b>
+      <br>
       <br>
       The components are all mostly made in house and without any code written by AI. This is done to build up and
       increase our own knowledge about web design and to give the website a unique and custom feel.
+      <br>
       <br>
       The website is built with a responsive design that supports mobile devices of sizes down to 360px and also comes
       with dark-/light-mode that automatically adjusts to the users preferences.
