--- a/src/app/common/components/card-selector/card-selector.scss
+++ b/src/app/common/components/card-selector/card-selector.scss
@@ -20,6 +20,7 @@ mat-card {
 
 mat-card-header {
   font: var(--typography-header-font-medium-accent);
+  font-size: clamp(1.75rem, 4.5cqw, calc(var(--typography-header-size-medium) + 10px));
   text-transform: uppercase;
   text-shadow: -2px -2px 1px var(--mat-sys-background), 2px -2px 1px var(--mat-sys-background),
   -2px 2px 1px var(--mat-sys-background), 2px 2px 1px var(--mat-sys-background);
@@ -34,6 +35,7 @@ mat-card-content {
 
   .text {
     font: var(--typography-body-font);
+    font-size: clamp(1rem, 2.75cqw, var(--typography-body-size));
     /*-webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: var(--mat-sys-background);*/
     text-shadow: -1px -1px 0 var(--mat-sys-background), 1px -1px 0 var(--mat-sys-background),
