--- a/src/app/common/components/card-selector/card-selector.scss
+++ b/src/app/common/components/card-selector/card-selector.scss
@@ -1,6 +1,7 @@
 @use '../../../../customVariables';
 
 mat-card {
+  container: my-layout / size;
   width: 100%;
   height: 110px;
   cursor: pointer;
@@ -20,13 +21,14 @@ mat-card {
 
 mat-card-header {
   font: var(--typography-header-font-medium-accent);
-  font-size: clamp(1.75rem, 4.5cqw, calc(var(--typography-header-size-medium) + 10px));
+  font-size: clamp(1.75rem, 7cqw, calc(var(--typography-header-size-medium) + 10px));
   text-transform: uppercase;
   text-shadow: -2px -2px 1px var(--mat-sys-background), 2px -2px 1px var(--mat-sys-background),
   -2px 2px 1px var(--mat-sys-background), 2px 2px 1px var(--mat-sys-background);
 }
 
 mat-card-content {
+  container: card-content-container;
   padding-left: 45px;
 
   //needed for icon positioning
@@ -35,7 +37,7 @@ mat-card-content {
 
   .text {
     font: var(--typography-body-font);
-    font-size: clamp(1rem, 2.75cqw, var(--typography-body-size));
+    font-size: clamp(1rem, 5cqw, var(--typography-body-size));
     /*-webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: var(--mat-sys-background);*/
     text-shadow: -1px -1px 0 var(--mat-sys-background), 1px -1px 0 var(--mat-sys-background),
