- added meta tag to block indexing of the site for now (should be removed when going fully live) - fixed scrolling issues when changing routes (page wouldn't scroll to top) - removed "Support"-text from home page as it doesn't make sense currently - implemented team page with member-cards - added 3 team members

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -51,8 +51,10 @@
       </mat-tree>
       <sidenav-mode-toggle [sidenav]="sidenav"/>
     </mat-drawer>
-    <full-page-loader/>
-    <scroll-to-top-button/>
-    <router-outlet/>
+    <mat-drawer-content cdkScrollable>
+      <full-page-loader/>
+      <scroll-to-top-button/>
+      <router-outlet/>
+    </mat-drawer-content>
   </mat-drawer-container>
 </div>
