--- a/src/app/pages/projects/project-summary-base/project-summary-base.html
+++ b/src/app/pages/projects/project-summary-base/project-summary-base.html
@@ -3,7 +3,7 @@
     Overview
   </mat-card-header>
 
-  <mat-card-content>
+  <mat-card-content cdkScrollable>
     <div class="side-by-side">
       <div>
         <p class="side-by-side__title">{{ project().title }}</p>
