- made project-summary shorter on mobile devices to always have the title "Project Documentation" visible below it. User feedback showed that having the project-summary take up the entire height made it feel like there was no content below it. This change should fix that and make it more obvious that project-summary isn't the only element on the projects page - restricted justified text to only p elements for Markdown. This should help with readability, as all long text passages, which benefit from being justified, should be in p elements, and all shorter text passages which can quickly look weird when being justified, will now be displayed normally. - small change to documentation of "devil jump" - removed typography overview from contact page as it isn't needed anymore

--- a/src/customStyles/markdown-styles.scss
+++ b/src/customStyles/markdown-styles.scss
@@ -1,6 +1,9 @@
 .markdownContainer {
-  text-align: justify;
   overflow-wrap: anywhere;
+
+  p {
+    text-align: justify;
+  }
 
   img {
     max-width: 100%;
