--- a/src/app/pages/projects/project-documentation/project-documentation.html
+++ b/src/app/pages/projects/project-documentation/project-documentation.html
@@ -2,6 +2,7 @@
   @if (loading) {
     <mat-spinner class="c-spinner-centered"/>
   } @else {
-    <div #documentationWrapper [innerHTML]="documentation" class="markdownContainer c-whitespace-container--slim"></div>
+    <div #documentationWrapper [innerHTML]="documentation | safeHtml"
+         class="markdownContainer c-whitespace-container--slim"></div>
   }
 </div>
