- added documentations and summaries to the projects "invasion of space" and "miko player character" - added team member image - fixed card-selector buttons on projects page to display all projects except active. Should have been done when reversing the order of the projects was implemented.

--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -35,7 +35,7 @@
 
     <div class="c-whitespace-container--slim">
       @for (project of projects; track project) {
-        @if (project.index != summaryTabGroupSelectedIndex()) {
+        @if (project.index != projects[summaryTabGroupSelectedIndex()].index) {
           <card-selector
             [title]="project.title"
             [subtitle]="project.oneLine"
